# KuiperInfer

./: CLAUDE.md
learning/: 学习指南.md
learning/day1/: CMakeLists.txt  README.md  main.cpp
learning/day1/include/: tensor.hpp
learning/day10/: CMakeLists.txt  README.md  main.cpp
learning/day10/include/layer/: layer_factory.hpp
learning/day11/: CMakeLists.txt  main.cpp
learning/day12/: CMakeLists.txt  README.md  main.cpp
learning/day12/include/layer/: batchnorm2d.hpp  silu.hpp
learning/day13/: CMakeLists.txt  main.cpp
learning/day13/src/: evaluator.cpp  evaluator.hpp  parser.cpp  tokenizer.cpp
learning/day14/: CMakeLists.txt
learning/day14/include/: tensor_util.hpp
learning/day15/: CMakeLists.txt  main.cpp
learning/day15/include/: tensor.hpp
learning/day15/include/layer/: flatten.hpp
learning/day15/include/runtime/: runtime_graph.hpp
learning/day16/: CMakeLists.txt  main.cpp
learning/day16/include/: yolo_detect.hpp
learning/day16/include/layer/: expression.hpp  yolo_detect.hpp
learning/day16/src/: tokenizer.hpp
learning/day17/: CMakeLists.txt  main.cpp
learning/day17/include/layer/: relu.hpp  sigmoid.hpp
learning/day18/: CMakeLists.txt  main.cpp
learning/day18/src/: main.cpp  parser.hpp
learning/day18/src/layer/: expression.cpp
learning/day2/: CMakeLists.txt  README.md  main.cpp
learning/day2/include/: tensor.hpp
learning/day3/: CMakeLists.txt  README.md  main.cpp
learning/day3/include/: tensor_util.hpp
learning/day4/: CMakeLists.txt  README.md  main.cpp
learning/day4/include/layer/: relu.hpp
learning/day5/: CMakeLists.txt  main.cpp
learning/day5/include/layer/: hardsigmoid.hpp  hardswish.hpp  relu6.hpp
learning/day6/: CMakeLists.txt  main.cpp
learning/day7/: CMakeLists.txt  main.cpp
learning/day7/include/layer/: convolution.hpp
learning/day8/: CMakeLists.txt  main.cpp
learning/day8/include/layer/: relu.hpp
learning/day9/: CMakeLists.txt  main.cpp
learning/day9/include/layer/: adaptive_avgpooling.hpp  layer.hpp  linear.hpp  maxpooling.hpp  sigmoid.hpp  softmax.hpp
